--- a/Ecishop/war/WEB-INF/web.xml
+++ b/Ecishop/war/WEB-INF/web.xml
@@ -15,7 +15,7 @@
   <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
   <init-param>
    <param-name>services</param-name>
-   <param-value>entity.EcishopApi</param-value>
+   <param-value>ecishop.EcishopApi</param-value>
   </init-param>
  </servlet>
  <servlet-mapping>
